--- a/assets/partials/header.pug
+++ b/assets/partials/header.pug
@@ -9,11 +9,11 @@ div(
     )
     div( class='text-center' )
         h1(
-            class='text-4xl text-white mt-6 font-medium'
+            class='text-4xl tracking-wide text-white mt-6 font-medium'
             class='animated fadeInUp slow'
         ) Thomas Deman
         p(
-            class='text-white font-thin'
+            class='text-white font-hairline'
             class='animated fadeInUp slow'
         ) Web Developer
     a( href='#about' )
