--- a/assets/sass/pages/_global.sass
+++ b/assets/sass/pages/_global.sass
@@ -1,5 +1,5 @@
 html, body
-    font-family: 'Poppins', sans-serif
+    font-family: 'Heebo', sans-serif
     scroll-behavior: smooth
 
 .my-container
