--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -1,3 +1,6 @@
 @import './pages/variables'
 @import './pages/global'
 @import './pages/header'
+@import './pages/about'
+@import './pages/portfolio'
+@import './pages/services'
