--- a/assets/partials/head.pug
+++ b/assets/partials/head.pug
@@ -6,4 +6,4 @@ head
     link(rel='stylesheet', href='./assets/css/style.css')
     link(rel='stylesheet' href='./assets/css/font-awesome.css')
     link(rel='stylesheet' href='./assets/css/animate.css')
-    link(href='https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap&subset=devanagari,latin-ext' rel='stylesheet')
+    link(href='https://fonts.googleapis.com/css?family=Heebo:100,300,400,500,700,800,900&display=swap' rel='stylesheet')
