--- a/index.pug
+++ b/index.pug
@@ -7,3 +7,7 @@ html(lang='en')
         include ./assets/partials/header
 
         include ./assets/partials/about
+
+        include ./assets/partials/services
+
+        include ./assets/partials/scripts
