adding global mixin for subtitle, creating structure for others pages

--- a/assets/partials/header.pug
+++ b/assets/partials/header.pug
@@ -3,10 +3,11 @@ div(
     class='w-full h-screen my-bg'
 )
     include ./navbar
-    div(
-        class='w-48 h-48 m-auto my-bg rounded-full'
-        class='me-img'
-    )
+    div( class='w-full pt-48' )
+        div(
+            class='w-48 h-48 m-auto my-bg rounded-full'
+            class='me-img'
+        )
     div( class='text-center' )
         h1(
             class='text-4xl tracking-wide text-white mt-6 font-medium'
