--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,10 @@
 html, body {
   font-family: 'Heebo', sans-serif;
   scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .my-container {
@@ -30,13 +34,17 @@ html, body {
   background-image: url("../img/header.jpg");
 }
 
+#header #navbar {
+  position: fixed;
+  top: 0;
+}
+
 #header #navbar div .title {
   font-family: 'Raleway', sans-serif;
 }
 
 #header .me-img {
   background-image: url("../img/me.jpg");
-  margin-top: 15vh;
 }
 
 #header a i {
