--- a/assets/partials/about.pug
+++ b/assets/partials/about.pug
@@ -22,12 +22,14 @@
         }
     ]
 
+include ./mixin
+
+
 div(
     id='about'
     class='w-full'
     )
-    div( class='w-full text-center' )
-        h2( class='text-3xl mt-20 subtitles relative inline-block' ) About Me
+    +subtitle( 'About Me' )
     div( class='flex justify-around pt-32 my-container' )
         div( class='w-1/3 px-8' )
             p( class='font-hairline leading-relaxed text-gray-800' ) Welcome to my Portfolio ! I'm a Junior web developer from Brussels, Belgium. I just finished a 6 months intensive full-stack web development formation. I've learned different languages and frameworks : Html / Css, Javascript / DOM, React, Bash, Php, Wordpress and Laravel.
