--- a/assets/partials/navbar.pug
+++ b/assets/partials/navbar.pug
@@ -7,9 +7,10 @@
         'contact'
     ]
 
+
 div(
     id='navbar'
-    class='h-20 w-full'
+    class='h-20 w-full fixed top-0'
 )
     div( class='my-container justify-between flex h-20 m-auto py-6' )
         h2( class='ml-8 text-2xl font-medium title text-white' )
