--- a/assets/sass/pages/_global.sass
+++ b/assets/sass/pages/_global.sass
@@ -1,6 +1,10 @@
 html, body
     font-family: 'Heebo', sans-serif
     scroll-behavior: smooth
+    margin: 0
+    padding: 0
+    width: 100%
+    height: 100%
 
 .my-container
     width: 80%
