adding fixed navbar and bug correction

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -4,3 +4,5 @@
 @import './pages/about'
 @import './pages/portfolio'
 @import './pages/services'
+@import './pages/contact'
+@import './pages/footer'
