--- a/index.pug
+++ b/index.pug
@@ -10,4 +10,8 @@ html(lang='en')
 
         include ./assets/partials/services
 
+        include ./assets/partials/contact
+
+        include ./assets/partials/footer
+
         include ./assets/partials/scripts
