--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,15 +34,6 @@ html, body {
   background-image: url("../img/header.jpg");
 }
 
-#header #navbar {
-  position: fixed;
-  top: 0;
-}
-
-#header #navbar div .title {
-  font-family: 'Raleway', sans-serif;
-}
-
 #header .me-img {
   background-image: url("../img/me.jpg");
 }
@@ -60,5 +51,22 @@ html, body {
 
 #services {
   background-color: #f7f7f7;
+}
+
+#services .services-animation {
+  -webkit-transition-property: all;
+  transition-property: all;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+}
+
+#services .services-animation:hover {
+  -webkit-box-shadow: 1px 2px 36px 7px rgba(130, 130, 130, 0.23);
+          box-shadow: 1px 2px 36px 7px rgba(130, 130, 130, 0.23);
+  bottom: 5px;
+}
+
+#footer {
+  height: 30vh;
 }
 /*# sourceMappingURL=style.css.map */
