--- a/assets/sass/pages/_services.sass
+++ b/assets/sass/pages/_services.sass
@@ -1,2 +1,8 @@
 #services
     background-color: $color-one
+    .services-animation
+        transition-property: all
+        transition-duration: 0.3s
+        &:hover
+            box-shadow: 1px 2px 36px 7px rgba(130, 130, 130, 0.23)
+            bottom: 5px
