contact form do,e

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,10 @@ html, body {
   margin: auto;
 }
 
+button:focus, input:focus, textarea:focus {
+  outline: none;
+}
+
 .my-bg {
   background-repeat: no-repeat;
   background-size: cover;
@@ -30,15 +34,15 @@ html, body {
           transform: translateX(-50%);
 }
 
-#header {
+#home {
   background-image: url("../img/header.jpg");
 }
 
-#header .me-img {
+#home .me-img {
   background-image: url("../img/me.jpg");
 }
 
-#header a i {
+#home a i {
   left: 50%;
   bottom: 5%;
   -webkit-transform: translateX(-50%);
@@ -47,10 +51,6 @@ html, body {
 
 #about {
   height: 90vh;
-}
-
-#services {
-  background-color: #f7f7f7;
 }
 
 #services .services-animation {
@@ -64,6 +64,23 @@ html, body {
   -webkit-box-shadow: 1px 2px 36px 7px rgba(130, 130, 130, 0.23);
           box-shadow: 1px 2px 36px 7px rgba(130, 130, 130, 0.23);
   bottom: 5px;
+}
+
+#contact {
+  background-color: #f7f7f7;
+}
+
+#contact .contact-button {
+  -webkit-transition: all .5s ease-out;
+  transition: all .5s ease-out;
+  background: -webkit-gradient(linear, left top, right top, color-stop(50%, black), color-stop(50%, transparent));
+  background: linear-gradient(to right, black 50%, transparent 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+}
+
+#contact .contact-button:hover {
+  background-position: left bottom;
 }
 
 #footer {
