--- a/assets/sass/pages/_global.sass
+++ b/assets/sass/pages/_global.sass
@@ -10,6 +10,9 @@ html, body
     width: 80%
     margin: auto
 
+button:focus, input:focus, textarea:focus
+    outline: none
+
 .my-bg
     background-repeat: no-repeat
     background-size: cover
