--- a/assets/partials/contact.pug
+++ b/assets/partials/contact.pug
@@ -2,7 +2,52 @@ include ./mixin
 
 
 div(
-    id='about'
+    id='contact'
     class='w-full'
-    )
+)
     +subtitle( 'Contact' )
+    div( class='my-container' )
+        div( class='flex w-full mt-24' )
+            div( class='w-1/3 pt-8 px-10' )
+                div.my-8
+                    p( class='text-lg' ) Phone:
+                    p( class='text-gray-600 font-light' ) Ask me by mail
+                div.my-8
+                    p( class='text-lg' ) Email:
+                    p( class='text-gray-600 font-light' ) dt.deman.thomas@gmail.com
+                div.my-8
+                    p( class='text-lg' ) Address:
+                    p( class='text-gray-600 font-light' ) Place de la Minoterie 10, 1080 Molenbeek-Saint-Jean (Molengeek)
+            div( class='w-2/3' )
+                form
+                    div( class='flex m-4' )
+                        div( class='w-1/2 mr-8' )
+                            input(
+                                class='w-full border border-gray-400 p-4 bg-transparent'
+                                placeholder='Name'
+                            )
+                        div( class='w-1/2' )
+                            input(
+                                class='w-full border border-gray-400 p-4 bg-transparent'
+                                placeholder='Email'
+                            )
+                    div( class='flex m-4' )
+                        div( class='w-full' )
+                            input(
+                                class='w-full border border-gray-400 p-4 bg-transparent'
+                                placeholder='Subject'
+                            )
+                    div( class='flex m-4' )
+                        div( class='w-full' )
+                            textarea(
+                                class='w-full border border-gray-400 p-4 bg-transparent'
+                                placeholder='Message'
+                                rows="8"
+                            )
+                    div( class='flex justify-end m-4' )
+                        button(
+                            class='border border-black py-4 px-6 text-black'
+                            class='contact-button'
+                            class='hover:text-white'
+                            type='submit'
+                        ) Send message
