--- a/assets/partials/footer.pug
+++ b/assets/partials/footer.pug
@@ -35,7 +35,7 @@ div(
                                 class='hover:text-gray-200'
                             )
     a(
-        href='#header'
+        href='#home'
         class='to-header'
         class='absolute'
     )
