--- a/assets/partials/contact.pug
+++ b/assets/partials/contact.pug
@@ -51,3 +51,4 @@ div(
                             class='hover:text-white'
                             type='submit'
                         ) Send message
+    include ./map
