--- a/assets/sass/pages/_contact.sass
+++ b/assets/sass/pages/_contact.sass
@@ -7,3 +7,5 @@
         background-position: right bottom
         &:hover
             background-position: left bottom
+    .map-height
+        height: 50vh
