--- a/assets/partials/about.pug
+++ b/assets/partials/about.pug
@@ -9,7 +9,7 @@
             percentage: 88
         },
         {
-            skill: 'React',
+            skill: 'React/Vue',
             percentage: 85
         },
         {
@@ -17,7 +17,7 @@
             percentage: 80
         },
         {
-            skill: 'Laravel',
+            skill: 'PHP',
             percentage: 75
         }
     ]
