adding image for the readme

--- a/assets/partials/services.pug
+++ b/assets/partials/services.pug
@@ -20,10 +20,7 @@
 
 include ./mixin
 
-div(
-    id='services'
-    class='h-screen'
-)
+div( id='services' )
     +subtitle( 'What I Do' )
     div( class='my-container' )
         div( class='flex mt-32 w-full justify-between' )
