--- a/assets/partials/contact.pug
+++ b/assets/partials/contact.pug
@@ -1,5 +1,23 @@
-include ./mixin
+- 
+    const personalInfos = [
+        {
+            type: 'Phone:',
+            text: 'Ask me by mail'
+        },
+        {
+            type: 'Email:',
+            text: 'dt.deman.thomas@gmail.com'
+        },
+        {
+            type: 'Address:',
+            text: 'Place de la Minoterie 10, 1080 Molenbeek-Saint-Jean (Molengeek)'
+        },
+    ];
 
+    const inputClass = 'w-full border border-gray-400 p-4 bg-transparent';
+
+
+include ./mixin
 
 div(
     id='contact'
@@ -9,38 +27,36 @@ div(
     div( class='my-container' )
         div( class='flex w-full mt-24' )
             div( class='w-1/3 pt-8 px-10' )
-                div.my-8
-                    p( class='text-lg' ) Phone:
-                    p( class='text-gray-600 font-light' ) Ask me by mail
-                div.my-8
-                    p( class='text-lg' ) Email:
-                    p( class='text-gray-600 font-light' ) dt.deman.thomas@gmail.com
-                div.my-8
-                    p( class='text-lg' ) Address:
-                    p( class='text-gray-600 font-light' ) Place de la Minoterie 10, 1080 Molenbeek-Saint-Jean (Molengeek)
+                each personalInfo, index in personalInfos
+                    div(
+                        class='my-8'
+                        key = index
+                    )
+                        p( class='text-lg' )= personalInfo.type
+                        p( class='text-gray-600 font-light' )= personalInfo.text
             div( class='w-2/3' )
                 form
                     div( class='flex m-4' )
                         div( class='w-1/2 mr-8' )
                             input(
-                                class='w-full border border-gray-400 p-4 bg-transparent'
+                                class=inputClass
                                 placeholder='Name'
                             )
                         div( class='w-1/2' )
                             input(
-                                class='w-full border border-gray-400 p-4 bg-transparent'
+                                class=inputClass
                                 placeholder='Email'
                             )
                     div( class='flex m-4' )
                         div( class='w-full' )
                             input(
-                                class='w-full border border-gray-400 p-4 bg-transparent'
+                                class=inputClass
                                 placeholder='Subject'
                             )
                     div( class='flex m-4' )
                         div( class='w-full' )
                             textarea(
-                                class='w-full border border-gray-400 p-4 bg-transparent'
+                                class=inputClass
                                 placeholder='Message'
                                 rows="8"
                             )
