--- a/assets/partials/footer.pug
+++ b/assets/partials/footer.pug
@@ -15,11 +15,11 @@
     ]
 
 
-div(
+section(
     id='footer'
     class='bg-black relative'
 )
-    div( class='my-container' )
+    .my-container
         div( class='flex w-full justify-between pt-32' )
             p( class='text-gray-400' ) &copy; 2019, Thomas Deman, All Rights Reserved.
             ul.flex
