--- a/assets/sass/pages/_global.sass
+++ b/assets/sass/pages/_global.sass
@@ -13,6 +13,9 @@ html, body
 button:focus, input:focus, textarea:focus
     outline: none
 
+a, p, button, i, div
+    transition: .2s ease
+
 .my-bg
     background-repeat: no-repeat
     background-size: cover
