--- a/assets/partials/about.pug
+++ b/assets/partials/about.pug
@@ -25,24 +25,25 @@
 include ./mixin
 
 
-div(
+section(
     id='about'
     class='w-full'
     )
     +subtitle( 'About Me' )
-    div( class='flex justify-around pt-32 my-container' )
-        div( class='w-1/3 px-8' )
-            p( class='font-hairline leading-relaxed text-gray-800' ) Welcome to my Portfolio ! I'm a Junior web developer from Brussels, Belgium. I just finished a 6 months intensive full-stack web development formation. I've learned different languages and frameworks : Html / Css, Javascript / DOM, React, Bash, Php, Wordpress and Laravel.
-        div( class='w-1/3 px-8' )
-            p( class='font-hairline leading-relaxed text-gray-800' ) I'm interested in the entire front-end spectrum of web development. I'm a well organised person, independant with high attention to detail. I'm naturally curious, and perpetually working on improving my skills.
-        div( class='w-1/3 px-5' )
-            each skillsTab, index in skillsTabs
-                div(
-                    class='shadow w-5/6 bg-gray-200 rounded mb-5'
-                    key=index
-                )
+    .my-container
+        div( class='flex justify-around mt-32' )
+            div( class='w-1/3 px-8' )
+                p( class='font-hairline leading-relaxed text-gray-800' ) Welcome to my Portfolio ! I'm a Junior web developer from Brussels, Belgium. I just finished a 6 months intensive full-stack web development formation. I've learned different languages and frameworks : Html / Css, Javascript / DOM, React, Bash, Php, Wordpress and Laravel.
+            div( class='w-1/3 px-8' )
+                p( class='font-hairline leading-relaxed text-gray-800' ) I'm interested in the entire front-end spectrum of web development. I'm a well organised person, independant with high attention to detail. I'm naturally curious, and perpetually working on improving my skills.
+            div( class='w-1/3 px-5' )
+                each skillsTab, index in skillsTabs
                     div(
-                        class='bg-gray-800 text-xs text-center text-white rounded'
-                        style=`width: ${ skillsTab.percentage }%`
-                    )= skillsTab.skill
+                        class='shadow w-5/6 bg-gray-200 rounded mb-5'
+                        key = index
+                    )
+                        div(
+                            class='bg-gray-800 text-xs text-center text-white rounded'
+                            style=`width: ${ skillsTab.percentage }%`
+                        )= skillsTab.skill
     include ./numbers
