--- a/assets/partials/contact.pug
+++ b/assets/partials/contact.pug
@@ -12,19 +12,19 @@
             type: 'Address:',
             text: 'Place de la Minoterie 10, 1080 Molenbeek-Saint-Jean (Molengeek)'
         },
-    ];
+    ]
 
-    const inputClass = 'w-full border border-gray-400 p-4 bg-transparent';
+    const inputClass = 'w-full border border-gray-400 p-4 bg-transparent'
 
 
 include ./mixin
 
-div(
+section(
     id='contact'
     class='w-full'
 )
     +subtitle( 'Contact' )
-    div( class='my-container' )
+    .my-container
         div( class='flex w-full mt-24' )
             div( class='w-1/3 pt-8 px-10' )
                 each personalInfo, index in personalInfos
@@ -39,26 +39,33 @@ div(
                     div( class='flex m-4' )
                         div( class='w-1/2 mr-8' )
                             input(
-                                class=inputClass
+                                class = inputClass
                                 placeholder='Name'
+                                type='text'
+                                required
                             )
                         div( class='w-1/2' )
                             input(
-                                class=inputClass
+                                class = inputClass
                                 placeholder='Email'
+                                type='email'
+                                required
                             )
                     div( class='flex m-4' )
                         div( class='w-full' )
                             input(
-                                class=inputClass
+                                class = inputClass
                                 placeholder='Subject'
+                                type='text'
+                                required
                             )
                     div( class='flex m-4' )
                         div( class='w-full' )
                             textarea(
-                                class=inputClass
+                                class = inputClass
                                 placeholder='Message'
                                 rows="8"
+                                required
                             )
                     div( class='flex justify-end m-4' )
                         button(
