--- a/assets/partials/navbar.pug
+++ b/assets/partials/navbar.pug
@@ -12,13 +12,14 @@ div(
     id='navbar'
     class='h-20 w-full fixed top-0'
 )
-    div( class='my-container justify-between flex h-20 m-auto py-6' )
-        h2( class='ml-8 text-2xl title text-white' ) TD
-        ul( class='flex justify-around w-2/5' )
-            each navLink, index in navLinks
-                li( key=index )
-                    a(
-                        href=`#${ navLink }`
-                        class='text-xs text-white'
-                        class='hover:text-gray-500'
-                    )= navLink.toUpperCase()
+    .my-container
+        div( class='justify-between flex h-20 m-auto py-6' )
+            h2( class='ml-8 text-2xl title text-white' ) TD
+            ul( class='flex justify-around w-2/5' )
+                each navLink, index in navLinks
+                    li( key = index )
+                        a(
+                            href=`#${ navLink }`
+                            class='text-xs text-white'
+                            class='hover:text-gray-500'
+                        )= navLink.toUpperCase()
