--- a/assets/partials/footer.pug
+++ b/assets/partials/footer.pug
@@ -32,11 +32,11 @@ section(
                             i(
                                 class = socialLink.icon
                                 class='text-gray-400 text-lg mx-4'
-                                class='hover:text-gray-100'
+                                class='hover:text-white'
                             )
     a(
         href='#home'
         class='to-header'
         class='absolute'
     )
-        i( class='fas fa-arrow-up text-gray-400 text-2xl hover:text-gray-100' )
+        i( class='fas fa-arrow-up text-gray-400 text-2xl hover:text-white' )
