--- a/assets/partials/navbar.pug
+++ b/assets/partials/navbar.pug
@@ -10,7 +10,7 @@
 
 div(
     id='navbar'
-    class='h-20 w-full fixed top-0'
+    class='h-20 w-full fixed top-0 z-50'
 )
     .my-container
         div( class='justify-between flex h-20 m-auto py-6' )
@@ -22,4 +22,5 @@ div(
                             href=`#${ navLink }`
                             class='text-xs text-white'
                             class='hover:text-gray-500'
+                            class='links'
                         )= navLink.toUpperCase()
