adding js file for increment numbers

--- a/assets/partials/header.pug
+++ b/assets/partials/header.pug
@@ -11,11 +11,11 @@ section(
     div( class='text-center' )
         h1(
             class='text-4xl tracking-wide text-white mt-6 font-medium'
-            class='animated fadeInUp slow'
+            class='animated fadeInUp delay-1s'
         ) Thomas Deman
         p(
             class='text-white font-hairline'
-            class='animated fadeInUp slow'
+            class='animated fadeInUp delay-2s'
         ) Web Developer
     a( href='#about' )
         i(
