--- a/assets/partials/numbers.pug
+++ b/assets/partials/numbers.pug
@@ -1,22 +1,5 @@
 - 
-    const hoursTabs = [
-        {
-            hours: 1160,
-            subject: 'Hours of Code'
-        },
-        {
-            hours: 80,
-            subject: 'Hours of Meetings'
-        },
-        {
-            hours: 25,
-            subject: 'Projects Done'
-        },
-        {
-            hours: 100,
-            subject: 'Hours of Research'
-        }
-    ]
+    const hoursTabs = [ 'Hours of Code', 'Hours of Meetings', 'Projects Done', 'Hours of Research' ]
 
 .my-container
     div( class='flex justify-around mt-24 mb-32' )
@@ -25,5 +8,7 @@
                 class='text-center'
                 key = index
             )
-                p( class='text-3xl font-thin' )= hoursTab.hours
-                p( class='font-hairline' )= hoursTab.subject
+                p(
+                    class='text-3xl font-thin'
+                    class=`number-${ index + 1 }` )
+                p( class='font-hairline' )= hoursTab
