--- a/assets/css/animate.css
+++ b/assets/css/animate.css
@@ -3568,6 +3568,32 @@
   animation-iteration-count: infinite;
 }
 
+.animated.delay-1s {
+  -webkit-animation-delay: 1s;
+  animation-delay: 1s;
+}
+
+.animated.delay-2s {
+  -webkit-animation-delay: 2s;
+  animation-delay: 2s;
+}
+
+.animated.delay-3s {
+  -webkit-animation-delay: 3s;
+  animation-delay: 3s;
+}
+
+.animated.delay-4s {
+  -webkit-animation-delay: 4s;
+  animation-delay: 4s;
+}
+
+.animated.delay-5s {
+  -webkit-animation-delay: 5s;
+  animation-delay: 5s;
+}
+
+
 .animated.fast {
   -webkit-animation-duration: 800ms;
   animation-duration: 800ms;
