--- a/assets/partials/numbers.pug
+++ b/assets/partials/numbers.pug
@@ -10,5 +10,5 @@
             )
                 p(
                     class='text-3xl font-thin'
-                    class=`number-${ index + 1 }` )
+                    class='number' )
                 p( class='font-hairline' )= hoursTab
