--- a/assets/sass/pages/_global.sass
+++ b/assets/sass/pages/_global.sass
@@ -31,3 +31,15 @@ a, p, button, i, div
         bottom: -40%
         left: 50%
         transform: translateX( -50% )
+
+.portfolio-links
+    &::after
+        display: block
+        content: ''
+        width: 100%
+        height: 2px
+        background-color: black
+        position: absolute
+        bottom: -40%
+        left: 50%
+        transform: translateX( -50% )
