--- a/index.pug
+++ b/index.pug
@@ -8,6 +8,8 @@ html( lang='en' )
 
         include ./assets/partials/about
 
+        include ./assets/partials/portfolio
+
         include ./assets/partials/services
 
         include ./assets/partials/contact
