--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,19 @@ a, p, button, i, div {
           transform: translateX(-50%);
 }
 
+.portfolio-links::after {
+  display: block;
+  content: '';
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  position: absolute;
+  bottom: -40%;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
 #home {
   background-image: url("../img/header.jpg");
 }
@@ -52,6 +65,10 @@ a, p, button, i, div {
   bottom: 5%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
+}
+
+#portfolio {
+  background-color: #f7f7f7;
 }
 
 #services .services-animation {
