--- a/assets/sass/pages/_portfolio.sass
+++ b/assets/sass/pages/_portfolio.sass
@@ -1,2 +1,13 @@
 #portfolio
     background-color: $color-one
+    img
+        &:hover
+            transition: .8s ease
+            filter: brightness(50%)
+            + p
+                opacity: 1
+    p
+        top: 42%
+        left: 50%
+        transform: translate(-50%, -50%)
+        transition: .8s ease
