--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,36 @@ a, p, button, i, div {
           transform: translateX(-50%);
 }
 
+.delay-1 {
+  -webkit-animation-delay: 0.25s;
+  animation-delay: 0.25s;
+}
+
+.delay-2 {
+  -webkit-animation-delay: 0.5s;
+  animation-delay: 0.5s;
+}
+
+.delay-3 {
+  -webkit-animation-delay: 0.75s;
+  animation-delay: 0.75s;
+}
+
+.delay-4 {
+  -webkit-animation-delay: 1s;
+  animation-delay: 1s;
+}
+
+.delay-5 {
+  -webkit-animation-delay: 1.25s;
+  animation-delay: 1.25s;
+}
+
+.delay-6 {
+  -webkit-animation-delay: 1.5s;
+  animation-delay: 1.5s;
+}
+
 #home {
   background-image: url("../img/header.jpg");
 }
@@ -69,6 +99,26 @@ a, p, button, i, div {
 
 #portfolio {
   background-color: #f7f7f7;
+}
+
+#portfolio img:hover {
+  -webkit-transition: .8s ease;
+  transition: .8s ease;
+  -webkit-filter: brightness(50%);
+          filter: brightness(50%);
+}
+
+#portfolio img:hover + p {
+  opacity: 1;
+}
+
+#portfolio p {
+  top: 42%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-transition: .8s ease;
+  transition: .8s ease;
 }
 
 #services .services-animation {
