--- a/assets/sass/pages/_global.sass
+++ b/assets/sass/pages/_global.sass
@@ -43,3 +43,27 @@ a, p, button, i, div
         bottom: -40%
         left: 50%
         transform: translateX( -50% )
+
+.delay-1
+    -webkit-animation-delay: 0.25s
+    animation-delay: 0.25s
+
+.delay-2
+    -webkit-animation-delay: 0.5s
+    animation-delay: 0.5s
+
+.delay-3
+    -webkit-animation-delay: 0.75s
+    animation-delay: 0.75s
+
+.delay-4
+    -webkit-animation-delay: 1s
+    animation-delay: 1s
+
+.delay-5
+    -webkit-animation-delay: 1.25s
+    animation-delay: 1.25s
+
+.delay-6
+    -webkit-animation-delay: 1.5s
+    animation-delay: 1.5s
