--- a/assets/partials/images.pug
+++ b/assets/partials/images.pug
@@ -10,6 +10,6 @@ img(
             ( count === 2 ) && ( 0 === ${ index } ) ||
             ( count === 2 ) && ( 1 === ${ index } ) ||
             ( count === 2 ) && ( 2 === ${ index } ) ||
-            ( count === 2 ) && ( 5 === ${ index } ),
+            ( count === 2 ) && ( 5 === ${ index } )
     }`
 )
