--- a/assets/partials/numbers.pug
+++ b/assets/partials/numbers.pug
@@ -9,6 +9,6 @@
                 key = index
             )
                 p(
-                    class='text-3xl font-thin'
+                    class='md:text-3xl text-xl font-thin'
                     class='number' )
-                p( class='font-hairline' )= hoursTab
+                p( class='font-hairline md:text-base text-sm' )= hoursTab
