--- a/assets/partials/about.pug
+++ b/assets/partials/about.pug
@@ -31,15 +31,15 @@ section(
     )
     +subtitle( 'About Me' )
     .my-container
-        div( class='flex justify-around mt-32' )
-            div( class='w-1/3 px-8' )
+        div( class='flex  md:flex-no-wrap flex-wrap md:justify-around mt-32' )
+            div( class='md:w-1/3 w-full px-8 md:m-0 mb-16' )
                 p( class='font-hairline leading-relaxed text-gray-800' ) Welcome to my Portfolio ! I'm a Junior web developer from Brussels, Belgium. I just finished a 6 months intensive full-stack web development formation. I've learned different languages and frameworks : Html / Css, Javascript / DOM, React, Bash, Php, Wordpress and Laravel.
-            div( class='w-1/3 px-8' )
+            div( class='md:w-1/3 w-full px-8 md:m-0 mb-16' )
                 p( class='font-hairline leading-relaxed text-gray-800' ) I'm interested in the entire front-end spectrum of web development. I'm a well organised person, independant with high attention to detail. I'm naturally curious, and perpetually working on improving my skills.
-            div( class='w-1/3 px-5' )
+            div( class='md:w-1/3 w-full px-5' )
                 each skillsTab, index in skillsTabs
                     div(
-                        class='shadow w-5/6 bg-gray-200 rounded mb-5'
+                        class='shadow w-5/6 bg-gray-200 rounded m-auto md:mb-5 mb-5'
                         key = index
                     )
                         div(
