--- a/assets/partials/contact.pug
+++ b/assets/partials/contact.pug
@@ -25,8 +25,8 @@ section(
 )
     +subtitle( 'Contact' )
     .my-container
-        div( class='flex w-full mt-24' )
-            div( class='w-1/3 pt-8 px-10' )
+        div( class='md:flex w-full mt-24' )
+            div( class='md:w-1/3 w-full md:pt-8 pt-0 px-10' )
                 each personalInfo, index in personalInfos
                     div(
                         class='my-8'
@@ -34,17 +34,17 @@ section(
                     )
                         p( class='text-lg' )= personalInfo.type
                         p( class='text-gray-600 font-light' )= personalInfo.text
-            div( class='w-2/3' )
+            div( class='md:w-2/3 w-full' )
                 form
-                    div( class='flex m-4' )
-                        div( class='w-1/2 mr-8' )
+                    div( class='flex md:flex-no-wrap flex-wrap m-4' )
+                        div( class='md:w-1/2 w-full md:mr-8 mr-0 md:mb-0 mb-4 mt-8 md:mt-0' )
                             input(
                                 class = inputClass
                                 placeholder='Name'
                                 type='text'
                                 required
                             )
-                        div( class='w-1/2' )
+                        div( class='md:w-1/2 w-full' )
                             input(
                                 class = inputClass
                                 placeholder='Email'
