--- a/assets/partials/header.pug
+++ b/assets/partials/header.pug
@@ -3,9 +3,9 @@ section(
     class='w-full h-screen my-bg'
 )
     include ./navbar
-    div( class='w-full pt-48' )
+    div( class='w-full md:pt-48 pt-32' )
         div(
-            class='w-48 h-48 m-auto my-bg rounded-full'
+            class='md:w-48 md:h-48 h-32 w-32 m-auto my-bg rounded-full'
             class='me-img'
         )
     div( class='text-center' )
