--- a/assets/partials/navbar.pug
+++ b/assets/partials/navbar.pug
@@ -10,7 +10,7 @@
 
 div(
     id='navbar'
-    class='h-20 w-full fixed top-0 z-50'
+    class='h-20 w-full fixed top-0 z-50 hidden md:block'
 )
     .my-container
         div( class='justify-between flex h-20 m-auto py-6' )
@@ -20,7 +20,7 @@ div(
                     li( key = index )
                         a(
                             href=`#${ navLink }`
-                            class='text-xs text-white'
+                            class='text-xs text-white sm:mx-2 mx-0'
                             class='hover:text-gray-500'
                             class='links'
                         )= navLink.toUpperCase()
