--- a/assets/partials/portfolio.pug
+++ b/assets/partials/portfolio.pug
@@ -37,14 +37,14 @@ include ./mixin
 
 section(
     id='portfolio'
-    class='w-full pb-32'
+    class='w-full md:pb-32 pb-24'
 )
     +subtitle( 'Portfolio' )
     div(
         class='mt-24'
         x-data='{ count: 0 }'
     )
-        ul( class='flex w-1/4 m-auto justify-around h-32' )
+        ul( class='flex md:w-1/4 w-1/2 m-auto justify-around h-32' )
             each portfolioTab, index in portfolioTabs
                 li( key = index )
                     button(
@@ -52,9 +52,9 @@ section(
                         :class=`{ 'text-gray-900 portfolio-links relative inline-block' : count === ${ index } }`
                         @click=`count = ${ index }`
                     )= portfolioTab
-        div( class='w-full flex flex-wrap' )
+        div( class='w-5/6 m-auto flex flex-wrap' )
             each imgTab, index in imgTabs
-                div( class='w-1/3 relative' )
+                div( class='md:w-1/3 w-full relative' )
                     a(
                         href=imgTab.href
                         target='_blank'
