--- a/assets/partials/services.pug
+++ b/assets/partials/services.pug
@@ -23,10 +23,10 @@ include ./mixin
 section( id='services' )
     +subtitle( 'What I Do' )
     .my-container
-        div( class='flex my-32 w-full justify-between' )
+        div( class='flex md:flex-no-wrap flex-wrap md:my-32 my-16 w-full justify-between' )
             each servicesTab, index in servicesTabs
                 div(
-                    class='w-1/3 border border-gray-300 rounded h-64 mx-6 text-center relative bottom-0'
+                    class='md:w-1/3 w-full border border-gray-300 rounded h-64 md:mx-6 md:mb-0 mb-16 text-center relative bottom-0'
                     class='services-animation'
                     key = index
                 )
