--- a/assets/sass/pages/_global.sass
+++ b/assets/sass/pages/_global.sass
@@ -44,26 +44,14 @@ a, p, button, i, div
         left: 50%
         transform: translateX( -50% )
 
-.delay-1
-    -webkit-animation-delay: 0.25s
-    animation-delay: 0.25s
+::-webkit-scrollbar
+    width: 14px
 
-.delay-2
-    -webkit-animation-delay: 0.5s
-    animation-delay: 0.5s
+::-webkit-scrollbar-track
+    background: #ececec
 
-.delay-3
-    -webkit-animation-delay: 0.75s
-    animation-delay: 0.75s
+::-webkit-scrollbar-thumb
+    background: #cecece
 
-.delay-4
-    -webkit-animation-delay: 1s
-    animation-delay: 1s
-
-.delay-5
-    -webkit-animation-delay: 1.25s
-    animation-delay: 1.25s
-
-.delay-6
-    -webkit-animation-delay: 1.5s
-    animation-delay: 1.5s
+::-webkit-scrollbar-thumb:hover
+    background: #8f8f8f
