--- a/assets/sass/pages/_services.sass
+++ b/assets/sass/pages/_services.sass
@@ -1,5 +1,6 @@
 #services
     .services-animation
+        height: 38vh
         transition-property: all
         transition-duration: 0.3s
         &:hover
