new link in portfolio: e-shop site

--- a/assets/partials/portfolio.pug
+++ b/assets/partials/portfolio.pug
@@ -27,8 +27,8 @@
             href: 'https://tom-deman.github.io/music/'
         },
         {
-            name: 'Portfolio',
-            href: 'https://tom-deman.github.io/portfolio/'
+            name: 'E-shop',
+            href: 'https://tom-deman.github.io/e-shop/'
         }
     ]
 
