--- a/assets/partials/images.pug
+++ b/assets/partials/images.pug
@@ -1,6 +1,7 @@
 img(
     src=`./assets/img/${ index + 1 }.png`
     class='px-4 mb-8'
+    class= index != 4 ? 'img-portfolio' : ''
     class='img-portfolio'
     :class=`{
         'hidden':
