--- a/assets/partials/portfolio.pug
+++ b/assets/partials/portfolio.pug
@@ -1,9 +1,9 @@
 - 
-    const portfolioTabs = [
-        'All',
-        'Web',
-        'Demos'
-    ]
+    //- const portfolioTabs = [
+    //-     'All',
+    //-     'Web',
+    //-     'Demos'
+    //- ]
 
     const imgTabs = [
         {
@@ -15,15 +15,8 @@
             href: 'https://tom-deman.github.io/agency/'
         },
         {
-            name: 'Photography',
-            href: 'https://tom-deman.github.io/Thomas_Deman/'
-        },
-        {
             name: 'E-shop',
             href: 'https://tom-deman.github.io/e-shop/'
-        },
-        {
-            name: 'Coming soon'
         }
     ]
 
@@ -39,14 +32,14 @@ section(
         class='mt-24'
         x-data='{ count: 0 }'
     )
-        ul( class='flex md:w-1/4 w-1/2 m-auto justify-around h-32' )
-            each portfolioTab, index in portfolioTabs
-                li( key = index )
-                    button(
-                        class=`font-light hover:text-black text-gray-500`
-                        :class=`{ 'text-gray-900 portfolio-links relative inline-block' : count === ${ index } }`
-                        @click=`count = ${ index }`
-                    )= portfolioTab
+        //- ul( class='flex md:w-1/4 w-1/2 m-auto justify-around h-32' )
+        //-     each portfolioTab, index in portfolioTabs
+        //-         li( key = index )
+        //-             button(
+        //-                 class=`font-light hover:text-black text-gray-500`
+        //-                 :class=`{ 'text-gray-900 portfolio-links relative inline-block' : count === ${ index } }`
+        //-                 @click=`count = ${ index }`
+        //-             )= portfolioTab
         div( class='w-5/6 m-auto flex flex-wrap' )
             each imgTab, index in imgTabs
                 div( class='md:w-1/3 w-full relative' )
@@ -55,5 +48,4 @@ section(
                         target='_blank'
                     )
                         include ./images
-                        if( index != 4 )
-                            p( class='absolute text-gray-100 text-lg text-medium opacity-0 pointer-events-none' )= imgTab.name
+                        p( class='absolute text-gray-100 text-lg text-medium opacity-0 pointer-events-none' )= imgTab.name
