--- a/index.pug
+++ b/index.pug
@@ -1,19 +1,13 @@
-<!DOCTYPE html>
-html( lang='en' )
+doctype html
+html( lang = 'en' )
 
     include ./assets/partials/head
-        title Portfolio
+        title Portfolio - Thomas Deman
     body
         include ./assets/partials/header
-
         include ./assets/partials/about
-
         include ./assets/partials/portfolio
-
         include ./assets/partials/services
-
         include ./assets/partials/contact
-
         include ./assets/partials/footer
-
         include ./assets/partials/scripts
