removing contact section, editing bio, changed cards services

--- a/assets/partials/about.pug
+++ b/assets/partials/about.pug
@@ -33,9 +33,9 @@ section(
     .my-container
         div( class='flex md:flex-no-wrap flex-wrap md:justify-around mt-32' )
             div( class='md:w-1/3 w-full px-8 md:m-0 mb-16' )
-                p( class='font-hairline leading-relaxed text-gray-800' ) Welcome to my Portfolio ! I'm a Junior <strong> web developer </strong> from <strong> Brussels </strong>, Belgium. I just finished a 6 months intensive full-stack web development formation. I've learned different languages and frameworks : Html / Css, Javascript / DOM, React, Bash, Php, Wordpress and Laravel. I'm actually <strong> working at Molengeek. </strong>
+                p( class='font-thin leading-relaxed text-gray-800' ) Welcome to my Portfolio ! I'm a Junior <strong> web developer </strong> from <strong> Brussels,</strong> Belgium. I finished a 6 months intensive full-stack web development training where I've learned different languages and frameworks : Html / Css, Javascript / DOM, React, Bash, Php, Wordpress and Laravel. I'm actually <strong> working at Molengeek Pro </strong> since 2 years.
             div( class='md:w-1/3 w-full px-8 md:m-0 mb-16' )
-                p( class='font-hairline leading-relaxed text-gray-800' ) I'm interested in the entire <strong> front-end </strong> spectrum of web development. I'm a well organised person, <strong> independant </strong> with high attention to detail. I'm naturally curious, and perpetually working on improving my skills. my <strong> github </strong> to see all my projects: <strong> <a href="https://github.com/tom-deman">https://github.com/tom-deman</a> </strong>
+                p( class='font-thin leading-relaxed text-gray-800' ) I'm interested in the entire <strong> front-end </strong> spectrum of web development. I'm a well organised person, <strong> independant </strong> with high attention to detail. I'm naturally curious, and perpetually working on improving my skills. My <strong> github </strong> to see all my projects: <strong> <a href="https://github.com/tom-deman" target="_blank">https://github.com/tom-deman</a> </strong>
             div( class='md:w-1/3 w-full px-5' )
                 each skillsTab, index in skillsTabs
                     div(
