--- a/assets/partials/header.pug
+++ b/assets/partials/header.pug
@@ -14,7 +14,7 @@ section(
             class='animated fadeInUp delay-1s'
         ) Thomas Deman
         p(
-            class='text-white font-hairline'
+            class='text-white font-thin mt-3'
             class='animated fadeInUp delay-2s'
         ) Web Developer
     a( href='#about' )
