--- a/assets/partials/footer.pug
+++ b/assets/partials/footer.pug
@@ -7,12 +7,10 @@
         {
             icon: 'fas fa-envelope',
             url: 'mailto:dt.deman.thomas@gmail.com'
-        },
-        {
-            icon: 'fab fa-instagram',
-            url: 'https://www.instagram.com/molengeek/'
         }
     ]
+
+    const date = new Date().getFullYear();
 
 
 section(
@@ -21,7 +19,7 @@ section(
 )
     .my-container
         div( class='flex w-full md:justify-between justify-around pt-32' )
-            p( class='text-gray-400 md:text-base text-xs' ) &copy; 2019, Thomas Deman, All Rights Reserved.
+            p( class='text-gray-400 md:text-base text-xs' ) &copy; #{ date } - Thomas Deman - All Rights Reserved
             ul.flex
                 each socialLink, index in socialLinks
                     li( key = index )
