--- a/assets/partials/services.pug
+++ b/assets/partials/services.pug
@@ -23,16 +23,16 @@ include ./mixin
 section( id='services' )
     +subtitle( 'What I Do' )
     .my-container
-        div( class='flex md:flex-no-wrap flex-wrap md:my-32 my-16 w-full justify-between' )
+        div( class='flex flex-wrap md:flex-wrap lg:flex-nowrap md:my-32 my-16 w-full justify-between' )
             each servicesTab, index in servicesTabs
                 div(
-                    class='md:w-1/3 w-full border border-gray-300 rounded h-64 md:mx-6 md:mb-0 mb-16 text-center relative bottom-0'
+                    class='flex flex-col justify-center py-12 lg:w-1/3 w-full border border-gray-200 rounded md:mx-6 md:mb-0 mb-16 text-center relative bottom-0'
                     class='services-animation'
                     key = index
                 )
                     i(
                         class = servicesTab.icon
-                        class='text-3xl mt-10'
+                        class='text-3xl'
                     )
                     h3( class='text-xl mt-4' )= servicesTab.title
-                    p( class='font-hairline mt-6 px-10' )= servicesTab.text
+                    p( class='font-thin mt-6 px-10' )= servicesTab.text
