--- a/assets/partials/services.pug
+++ b/assets/partials/services.pug
@@ -3,7 +3,7 @@
         {
             icon: 'fas fa-pencil-alt',
             title: 'Web Design',
-            text: 'Building modern web design for your site or web Application'
+            text: 'Building modern web design for your site or web Application.'
         },
         {
             icon: 'fas fa-globe',
