--- a/assets/partials/about.pug
+++ b/assets/partials/about.pug
@@ -1,49 +1,70 @@
 - 
     const skillsTabs = [
         {
-            skill: 'Html/Css (Sass)',
+            skill     : 'Html / Css ( Sass )',
             percentage: 96
         },
         {
-            skill: 'Javascript',
-            percentage: 88
+            skill     : 'Javascript',
+            percentage: 90
         },
         {
-            skill: 'React/Vue',
-            percentage: 85
+            skill     : 'React / Vue',
+            percentage: 86
         },
         {
-            skill: 'Wordpress',
-            percentage: 80
+            skill     : 'Wordpress',
+            percentage: 84
         },
         {
-            skill: 'PHP',
+            skill     : 'PHP',
             percentage: 75
+        },
+        {
+            skill     : 'Laravel',
+            percentage: 71
         }
     ]
 
 include ./mixin
 
 
-section(
-    id='about'
-    class='w-full'
-    )
+section#about.w-full
     +subtitle( 'About Me' )
     .my-container
-        div( class='flex md:flex-no-wrap flex-wrap md:justify-around mt-32' )
-            div( class='md:w-1/3 w-full px-8 md:m-0 mb-16' )
-                p( class='font-thin leading-relaxed text-gray-800' ) Welcome to my Portfolio ! I'm a Junior <strong> web developer </strong> from <strong> Brussels,</strong> Belgium. I finished a 6 months intensive full-stack web development training where I've learned different languages and frameworks : Html / Css, Javascript / DOM, React, Bash, Php, Wordpress and Laravel. I'm actually <strong> working at Molengeek Pro </strong> since 2 years.
-            div( class='md:w-1/3 w-full px-8 md:m-0 mb-16' )
-                p( class='font-thin leading-relaxed text-gray-800' ) I'm interested in the entire <strong> front-end </strong> spectrum of web development. I'm a well organised person, <strong> independant </strong> with high attention to detail. I'm naturally curious, and perpetually working on improving my skills. My <strong> github </strong> to see all my projects: <strong> <a href="https://github.com/tom-deman" target="_blank">https://github.com/tom-deman</a> </strong>
-            div( class='md:w-1/3 w-full px-5' )
+        .flex.flex-wrap.mt-32( class = 'md:flex-no-wrap md:justify-around' )
+            .w-full.px-8.mb-16( class = 'md:w-1/3 md:m-0 ' )
+                p.font-thin.leading-relaxed.text-gray-800.
+
+                    Welcome to my Portfolio ! I'm a Junior #[strong web developer] from #[strong Brussels,] Belgium.
+                    I finished a 6 months intensive full-stack web development training where I've learned
+                    different languages and frameworks : Html / Css, Javascript / DOM, React, Bash, Php,
+                    Wordpress and Laravel. I'm actually #[strong working at Molengeek Pro] since 2 years.
+
+            .w-full.px-8.mb-16( class = 'md:w-1/3 md:m-0' )
+                p.font-thin.leading-relaxed.text-gray-800.
+
+                    I'm interested in the entire #[strong front-end] spectrum of web development. I'm a well organised
+                    person, #[strong independant] with high attention to detail. I'm naturally curious,
+                    and perpetually working on improving my skills. My #[strong Github] to see all my projects:
+
+                    <strong>
+                        <a
+                            href   = 'https://github.com/tom-deman'
+                            target = '_blank'
+                        >
+                            https://github.com/tom-deman
+                        </a>
+                    </strong>
+
+            .w-full.px-5( class = 'md:w-1/3' )
                 each skillsTab, index in skillsTabs
-                    div(
-                        class='shadow w-5/6 bg-gray-200 rounded m-auto md:mb-5 mb-5'
-                        key = index
+                    .mb-5.bg-gray-200.rounded.m-auto.shadow(
+                        class = 'w-5/6 md:mb-5'
+                        key   = index
                     )
-                        div(
-                            class='bg-gray-800 text-xs text-center text-white rounded'
-                            style=`width: ${ skillsTab.percentage }%`
+                        .bg-gray-800.text-xs.text-center.text-white.rounded(
+                            style = `width: ${ skillsTab.percentage }%`
                         )= skillsTab.skill
+
     include ./numbers
