--- a/assets/partials/contact.pug
+++ b/assets/partials/contact.pug
@@ -10,8 +10,8 @@
         },
         {
             type: 'Address:',
-            text: 'Place de la Minoterie 10, 1080 Molenbeek-Saint-Jean (Molengeek)'
-        },
+            text: 'Place de la Minoterie 10, 1080 Molenbeek-Saint-Jean ( Molengeek )'
+        }
     ]
 
     const inputClass = 'w-full border border-gray-400 p-4 bg-transparent'
@@ -19,59 +19,52 @@
 
 include ./mixin
 
-section(
-    id='contact'
-    class='w-full'
-)
+section#contact.w-full
     +subtitle( 'Contact' )
     .my-container
-        div( class='md:flex w-full mt-24' )
-            div( class='md:w-1/3 w-full md:pt-8 pt-0 px-10' )
+        .w-full.mt-24( class = 'md:flex' )
+            .w-full.pt-0.px-10( class = 'md:w-1/3 md:pt-8' )
                 each personalInfo, index in personalInfos
-                    div(
-                        class='my-8'
-                        key = index
-                    )
-                        p( class='text-lg' )= personalInfo.type
-                        p( class='text-gray-600 font-light' )= personalInfo.text
-            div( class='md:w-2/3 w-full' )
+                    .my-8( key = index )
+                        p.text-lg= personalInfo.type
+                        p.text-gray-600.font-light= personalInfo.text
+            .w-full( class = 'md:w-2/3' )
                 form
-                    div( class='flex md:flex-no-wrap flex-wrap m-4' )
-                        div( class='md:w-1/2 w-full md:mr-8 mr-0 md:mb-0 mb-4 mt-8 md:mt-0' )
+                    .flex.flex-wrap.m-4( class = 'md:flex-no-wrap' )
+                        .w-full.mr-0.mb-4.mt-8( class = 'md:w-1/2 md:mr-8 md:mb-0 md:mt-0' )
                             input(
-                                class = inputClass
-                                placeholder='Name'
-                                type='text'
+                                class       = inputClass
+                                placeholder = 'Name'
+                                type        = 'text'
                                 required
                             )
-                        div( class='md:w-1/2 w-full' )
+                        .w-full( class='md:w-1/2' )
                             input(
-                                class = inputClass
-                                placeholder='Email'
-                                type='email'
+                                class       = inputClass
+                                placeholder = 'Email'
+                                type        = 'email'
                                 required
                             )
-                    div( class='flex m-4' )
-                        div( class='w-full' )
+                    .flex.m-4
+                        .w-full
                             input(
-                                class = inputClass
-                                placeholder='Subject'
-                                type='text'
+                                class       = inputClass
+                                placeholder = 'Subject'
+                                type        = 'text'
                                 required
                             )
-                    div( class='flex m-4' )
-                        div( class='w-full' )
+                    .flex.m-4
+                        .w-full
                             textarea(
-                                class = inputClass
-                                placeholder='Message'
-                                rows="8"
+                                class       = inputClass
+                                placeholder = 'Message'
+                                rows        = '8'
                                 required
                             )
-                    div( class='flex justify-end m-4' )
-                        button(
-                            class='border border-black py-4 px-6 text-black'
-                            class='contact-button'
-                            class='hover:text-white'
-                            type='submit'
+                    div.flex.justify-end.m-4
+                        button.border.border-black.py-4.px-6.text-black(
+                            class = 'hover:text-white contact-button'
+                            type  = 'submit'
                         ) Send message
+
     include ./map
