--- a/assets/partials/map.pug
+++ b/assets/partials/map.pug
@@ -1,11 +1,10 @@
-div( id='map' )
-    iframe(
-        title='map'
-        class='w-3/4 m-auto my-24'
-        class='map-height'
-        src='https://maps.google.com/maps?q=Place%20de%20la%20Minoterie%2010%201080%20Molenbeek-Saint-Jean%2C%20Belgique&t=&z=19&ie=UTF8&iwloc=&output=embed'
-        frameBorder='0'
-        scrolling='yes'
-        marginHeight='0'
-        marginWidth='0'
+#map
+    iframe.m-auto.my-24.map-height(
+        title        = 'map'
+        class        = 'w-3/4'
+        src          = 'https://maps.google.com/maps?q=Place%20de%20la%20Minoterie%2010%201080%20Molenbeek-Saint-Jean%2C%20Belgique&t=&z=19&ie=UTF8&iwloc=&output=embed'
+        frameBorder  = '0'
+        scrolling    = 'yes'
+        marginHeight = '0'
+        marginWidth  = '0'
     )
