--- a/assets/partials/mixin.pug
+++ b/assets/partials/mixin.pug
@@ -1,3 +1,3 @@
 mixin subtitle( a )
-    div( class='w-full text-center' )
-        h2( class='text-3xl mt-20 subtitles relative inline-block' )= a
+    .w-full.text-center
+        h2.text-3xl.mt-20.subtitles.relative.inline-block= a
