--- a/assets/partials/portfolio.pug
+++ b/assets/partials/portfolio.pug
@@ -1,10 +1,4 @@
 - 
-    //- const portfolioTabs = [
-    //-     'All',
-    //-     'Web',
-    //-     'Demos'
-    //- ]
-
     const imgTabs = [
         {
             name: 'Musician',
@@ -23,21 +17,16 @@
 
 include ./mixin
 
-section(
-    id='portfolio'
-    class='w-full md:pb-32 pb-24'
-)
+section#portfolio.w-full.pb-24( class = 'md:pb-32' )
     +subtitle( 'Portfolio' )
-    div(
-        class='mt-24'
-        x-data='{ count: 0 }'
-    )
-        div( class='w-5/6 m-auto flex flex-wrap' )
+    .mt-24( x-data = '{ count: 0 }' )
+
+        .m-auto.flex.flex-wrap( class='w-5/6' )
             each imgTab, index in imgTabs
-                div( class='md:w-1/3 w-full relative' )
+                .w-full.relative( class='md:w-1/3' )
                     a(
-                        href=imgTab.href
-                        target='_blank'
+                        href   = imgTab.href
+                        target = '_blank'
                     )
                         include ./images
-                        p( class='absolute text-gray-100 text-lg text-medium opacity-0 pointer-events-none' )= imgTab.name
+                        p.absolute.text-gray-100.text-lg.text-medium.opacity-0.pointer-events-none= imgTab.name
