misspelling of words corrections

--- a/assets/partials/about.pug
+++ b/assets/partials/about.pug
@@ -44,8 +44,8 @@ section#about.w-full
             .w-full.px-8.mb-16( class = 'md:w-1/3 md:m-0' )
                 p.font-thin.leading-relaxed.text-gray-800.
 
-                    I'm interested in the entire #[strong front-end] spectrum of web development. I'm a well organised
-                    person, #[strong independant] with high attention to detail. I'm naturally curious,
+                    I'm interested in the entire #[strong front-end] spectrum of web development. I'm a well organized
+                    person, #[strong independent] with high attention to detail. I'm naturally curious,
                     and perpetually working on improving my skills. My #[strong Github] to see all my projects:
 
                     <strong>
